Added commas to protocol

--- a/quizgame_client.ipynb
+++ b/quizgame_client.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/taylan-sen/CIS320_SP23_pub/blob/main/quizgame_client.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/taylan-sen/CIS320_SP24_pub/blob/main/quizgame_client.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-6BvpFUDitrU",
-        "outputId": "40c8f507-413b-4feb-d622-c27320e4336b"
+        "outputId": "47eedbce-63d8-4a0f-b192-7954930eb507"
       },
       "outputs": [
         {
@@ -42,7 +42,7 @@
           "text": [
             "...sent...\n",
             "...waiting for resp...\n",
-            "RX: oracle answer recorded\n"
+            "RX: answer recorded\n"
           ]
         }
       ],
@@ -51,10 +51,10 @@
         "\n",
         "import socket\n",
         "\n",
-        "server_addr = ('35.232.71.42', 12001)\n",
+        "server_addr = ('34.133.106.229', 12001)\n",
         "with socket.socket(type = socket.SOCK_DGRAM) as s:\n",
-        "  #tx_msg = input('ENTER: name question_number answer\\nexample: Ty 1 a\\n:')\n",
-        "  tx_msg = 'Ty 1 a'\n",
+        "  #tx_msg = input('ENTER: name question_number answer\\nexample: Ty, 1, a\\n:')\n",
+        "  tx_msg = 'Monte, 1, a'\n",
         "  s.sendto(tx_msg.encode(), server_addr)\n",
         "  print('...sent...')\n",
         "  print('...waiting for resp...')\n",
